--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,34 +1,3 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t "hello"
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t("hello") %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   "true": "foo"
-#
-# To learn more, please read the Rails Internationalization guide
-# available at https://guides.rubyonrails.org/i18n.html.
-
 en:
   title_app: "RailsTutorial"
   static_pages:
@@ -94,3 +63,14 @@ en:
       check_email: "Please check your email to activate your account."
       subject: "Account activation"
       link: "Activate"
+      forgot_password: "Forgot password"
+  password_reset:
+    send_email: "Email sent with password reset instructions"
+    email_not_found: "Email address not found"
+    password_not_empty: "can't be empty"
+    password_has_reseted: "Password has been reset."
+    expire: "Password reset has expired."
+    password:
+      confirm: "Confirmation"
+      update: "Update password"
+      reset: "Reset password"
